# Jetpack

./: .gitignore  CMakeLists.txt  Makefile  README.md  doc.txt  map_documentation.md  protocol_documentation_en.md  protocol_documentation_fr.md
.github/workflows/: action.yml
docs/: index.html
docs/html/: AUTH_8cpp.html  Animation_8hpp_source.html  CD_8cpp.html  Client_8cpp.html  Client_8hpp.html  Client_8hpp.js  Client_8hpp_source.html  ClientsPosition_8cpp.html  ClientsPositions_8cpp.html  Coin_8cpp.html  Coin_8hpp.html  Coin_8hpp.js  Coin_8hpp_source.html  Cwd_8cpp.html  Cwd_8hpp.html  Cwd_8hpp.js  Cwd_8hpp_source.html  DELETE_8cpp.html  EXIT_8cpp.html  Exception_8hpp.html  Exception_8hpp.js  Exception_8hpp_source.html  Exit_8cpp.html  FEAT_8cpp.html  GET_8cpp.html  Game_8cpp.html  ID_8cpp.html  Jetpack_8cpp.html  Jetpack_8cpp.js  Jetpack_8hpp.html  Jetpack_8hpp.js  Jetpack_8hpp_source.html  LS_8cpp.html  Logs_8cpp.html  Logs_8hpp.html  Logs_8hpp.js  Logs_8hpp_source.html  MODE_8cpp.html  PUT_8cpp.html  Player_8cpp.html  (+312 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+42 more)
docs/tests/: test.functions.html  test.html
include/client/: Animation.hpp  Client.hpp  Coin.hpp  Player.hpp  Trap.hpp  Zapper.hpp
include/server/: Server.hpp  ServerClient.hpp
include/utils/: Cwd.hpp  Exception.hpp  Jetpack.hpp  Logs.hpp  PositionHash.hpp  Socket.hpp
maps/: basic.txt  cluster_map.txt  line_map.txt  random_map.txt  small.txt
src/client/: Animation.cpp  Client.cpp  Coin.cpp  Game.cpp  Main.cpp  Player.cpp  Trap.cpp  Zapper.cpp
src/client/commands/: Exit.cpp
src/client/handlers/: ClientsNb.cpp  ClientsPosition.cpp  ClientsStats.cpp  Id.cpp  Map.cpp  Move.cpp  Pseudo.cpp
src/server/: Game.cpp  Main.cpp  Server.cpp  ServerClient.cpp
src/server/commands/: ClientsNb.cpp  ClientsPositions.cpp  ClientsStats.cpp  Id.cpp  Map.cpp  Move.cpp  Pseudo.cpp
src/utils/: Cwd.cpp  Jetpack.cpp  Logs.cpp  PositionHash.cpp  Socket.cpp
tests/: Makefile
